0.1 Initial release
1.0
- Change net scale from absolute to relative, with option to revert to
  absolute (-nsa --net-scale-absolute).
SVN:
- Improve response time when switching screens.
- Battery status monitoring courtesy of Pieter De Wit
- Detect if Network interface is incorrect and disable netscreen.  Resolves 100% cpu issue reported by Guy Dierx.
SVN 504:
- Bottom row information rotation switched with the L5 key
- 3 additional CPU graph variants switched with the L4 key (at this moment for multi core processors only)
- New default CPU Screen (at this moment for multi core processors only)
- Display unicore graphs only on the CPU screen with the option -u (--unicore)
SVN 505:
- Bugfix: Render bottom line on the Memory Screen once
SVN 509:
- Temperature sensors depends on the lmsensors sysfs filesystem
SVN 510:
- Temperature sensor's autodetect
- Force user sensor id with the option -s id (The id should point to sysfs path /sys/class/hwmon/hwmon[id]/device/temp1_input)
SVN 511:
- Improve sensor's autodetect
- Clean up
SVN 512:
- CPU Screens variants for uni core processors
- CPU frequency info (if available)
- Battery Screen is enabled if available
- Clean up
